@@ -1,18 +1,8 @@
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.0'
-    }
-}
-
 apply plugin: 'java'
 apply plugin: 'idea'
-apply plugin: 'org.junit.platform.gradle.plugin'
 
-sourceCompatibility = 9
-targetCompatibility = 9
+sourceCompatibility = 11
+targetCompatibility = 11
 version = '0.0.1'
 
 repositories {
@@ -82,21 +72,8 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
 
 tasks.withType(JavaCompile) {
     doFirst {
-        sourceCompatibility = 9
-        targetCompatibility = 9
-        options.compilerArgs = [
-                '--add-modules', 'java.se.ee',
-                '--add-exports', 'java.xml.bind/com.sun.istack.internal=ALL-UNNAMED'
-        ]
-    }
-}
-
-tasks.withType(Test) {
-    doFirst {
-        jvmArgs = [
-                '--add-modules', 'java.se.ee',
-                '-Djava.locale.providers=COMPAT,SPI',
-        ]
+        sourceCompatibility = 11
+        targetCompatibility = 11
     }
 }
 
@@ -105,24 +82,6 @@ task jars {
     dependsOn jar, sourceJar, javadocJar
 }
 
-junitPlatform {
-    // platformVersion '1.0.0'
-    filters {
-        engines {
-            // include 'junit-jupiter', 'junit-vintage'
-            // exclude 'custom-engine'
-        }
-        tags {
-            // include 'fast'
-            exclude 'slow'
-        }
-        // includeClassNamePattern '.*Test'
-    }
-    // configurationParameter 'junit.jupiter.conditions.deactivate', '*'
-    // enableStandardTestTask true
-    // reportsDir file('build/test-results/junit-platform') // this is the default
-    logManager 'org.apache.logging.log4j.jul.LogManager'
-}
 
 dependencies {
     compile 'io.dropwizard:dropwizard-core:' + dropwizardVersion
@@ -134,6 +93,7 @@ dependencies {
 
 test {
     systemProperties 'property': 'value'
+    useJUnitPlatform()
 }
 
 uploadArchives {
