@@ -38,30 +38,10 @@ buildscript {
 
 tasks.withType(JavaCompile) {
     doFirst {
-        sourceCompatibility = 9
-        targetCompatibility = 9
-        options.compilerArgs = [
-                '--add-modules', 'java.se.ee',
-                '--add-modules', 'java.activation',
-                '--add-modules', 'java.xml.ws.annotation',
-                '--add-modules', 'java.xml.bind',
-                '--add-exports', 'java.xml.bind/com.sun.istack.internal=ALL-UNNAMED'
-        ]
+        sourceCompatibility = 11
+        targetCompatibility = 11
     }
 }
-
-tasks.withType(Test) {
-    doFirst {
-        jvmArgs = [
-                '--add-modules', 'java.se.ee',
-                '--add-modules', 'java.activation',
-                '--add-modules', 'java.xml.ws.annotation',
-                '--add-modules', 'java.xml.bind',
-                '-Djava.locale.providers=COMPAT,SPI',
-        ]
-    }
-}
-
 
 dependencyManagement {
     imports {
